<resources>
    <string name="app_name">AcessibilityWorkshop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_temporary_note_below">Enter a temporary note below</string>
    <string name="create_a_new_temporary_note">Create a new temporary note</string>
    <string name="welcome_to_the_accessibility_playground">Welcome to the Accessibility Playground.</string>
    <string name="go_to_accessibility_settings">Go to Accessibility settings</string>
    <string name="long_press_to_remove_note">Long press the box to remove the note.</string>
    <string name="default_notes_content_description">Notes text. Long press to clear text.</string>
</resources>